# pi-door-security

./: readme.md
app/android/app/: build.gradle.kts
app/android/app/src/main/kotlin/com/freeoxide/pidoorsec/app/app/: MainActivity.kt
app/ios/Runner.xcodeproj/: project.pbxproj
app/linux/: CMakeLists.txt
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner/Configs/: AppInfo.xcconfig
app/windows/runner/: Runner.rc
client_server/: Cargo.toml  pi-door-client.service  readme.md
client_server/docs/: implementation_plan.md  implementation_status.md  raw_specs.md  refined_specs.md
client_server/examples/: config.toml
client_server/src/: lib.rs  main.rs
client_server/src/actuators/: mod.rs
client_server/src/api/: error.rs  mod.rs  models.rs
client_server/src/api/handlers/: actuators.rs  arm_disarm.rs  ble.rs  config.rs  mod.rs  status.rs  websocket.rs
client_server/src/ble/: mod.rs
client_server/src/cloud/: client.rs  mod.rs  queue_manager.rs  reconnect.rs
client_server/src/config/: mod.rs  schema.rs  validation.rs
client_server/src/events/: bus.rs  mod.rs  queue.rs  types.rs
client_server/src/gpio/: mock.rs  mod.rs  rppal.rs  traits.rs
client_server/src/health/: mod.rs  watchdog.rs
client_server/src/network/: mod.rs
client_server/src/observability/: mod.rs
client_server/src/rf433/: mod.rs
client_server/src/security/: mod.rs  privileges.rs  secrets.rs
client_server/src/state/: machine.rs  mod.rs  shared.rs  transitions.rs
client_server/src/timers/: mod.rs
client_server/tests/: api_integration.rs  state_machine_integration.rs
client_server/tests/integration/: mod.rs  state_machine_tests.rs
master_server/: .env.example  Cargo.toml  Dockerfile  FINAL_STATUS.md  IMPLEMENTATION_STATUS.md  README.md  docker-compose.yml
master_server/docs/: implementation_plan.md  raw_specs.md  refined_specs.md
master_server/migration/: Cargo.toml
master_server/migration/src/: lib.rs  m20250108_000001_create_users.rs  m20250108_000002_create_clients.rs  m20250108_000003_create_user_clients.rs  m20250108_000004_create_sessions.rs  m20250108_000005_create_events.rs  m20250108_000006_create_commands.rs  m20250108_000007_create_heartbeats.rs
master_server/src/: app.rs  config.rs  main.rs
master_server/src/auth/: middleware.rs  mod.rs  otp.rs  password.rs  session.rs
master_server/src/cli/: main.rs
master_server/src/db/: connect.rs  mod.rs
master_server/src/entities/: clients.rs  commands.rs  events.rs  heartbeats.rs  mod.rs  sessions.rs  user_clients.rs  users.rs
master_server/src/handlers/: auth.rs  clients.rs  commands.rs  mod.rs  telemetry.rs  users.rs
web/: Cargo.toml
